<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:padding="20dp"
    android:id="@+id/dialog_forgot">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/forgotTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_fill"

            android:paddingStart="16dp"
            android:paddingTop="15dp"
            android:paddingBottom="8dp"
            android:text="@string/text_forgot_password"
            android:textColor="@color/md_theme_light_onPrimary"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="8dp"
            android:text="@string/text_email_fill"
            android:textColor="@color/md_theme_light_onPrimary"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:backgroundTint="@color/md_theme_light_onPrimary"
            android:drawableStart="@drawable/baseline_email_24"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textColor="@color/md_theme_light_onPrimary"
            android:textColorHint="@color/md_theme_light_onPrimary"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/button_cancel"
            android:textColor="@color/md_theme_light_onPrimary"
            android:textSize="14sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/button_reset"
            android:textColor="@color/md_theme_light_onPrimary"
            android:textSize="14sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
