<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signin_bg"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_opacity"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="20dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:minHeight="300dp" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_border"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"

                android:padding="8dp"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textColorHint="@color/md_theme_light_onSecondary"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_border"
                android:drawableStart="@drawable/baseline_password_24"
                android:drawablePadding="8dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/md_theme_light_onSecondary"
                android:textColorHint="@color/md_theme_light_onPrimary"
                tools:ignore="VisualLintTextFieldSize" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/button_sign_up"
                android:textSize="18sp"
                app:cornerRadius="30dp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/loginRedirectButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:shadowColor="@color/md_theme_light_shadow"
                android:shadowRadius="50"
                android:text="@string/button_already_a_user"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="18sp" />

            <Button
                android:id="@+id/skipButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:padding="8dp"
                android:shadowColor="@color/md_theme_light_shadow"
                android:shadowRadius="50"
                android:text="@string/skip"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>